ReactJS movie rating website

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
+
+
+h1{
+  margin: 0;
+  /* h1 ki wjah se margin 0 aayegi isliye   */
+}
+.header{
+  background-color: blue;
+  padding: 8px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* main me sare cmponenets h */
+.main{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 10px;
+
+}
+.movie{
+  background-color: rgb(96, 91, 91) ;
+  color: black;
+  padding: 10px;
+  padding-bottom: 20px;
+  width: 22%;
+  margin-top: 18px;
+  text-align: center;
+}
+.movie img{
+  height: 220px;
+  width: 100%;
+}
+.movie p{
+  color: rgb(228, 157, 157);
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
